@@ -1,0 +1,3 @@
+#...
+0+800000 .* foo.*
+#pass
