@@ -1,0 +1,3 @@
+	.data
+	.dc.a	foo
+	.dc.a	data_begin
